--- a/app/pug/includes/_footer.pug
+++ b/app/pug/includes/_footer.pug
@@ -1,1 +1,8 @@
-footer
+footer.footer.d-flex.align-items-center
+    .container-fluid
+        .row
+            .col-6.d-flex.align-items-center.justify-content-start
+                a(href="#")
+                    img(src="./img/icwt-logo.svg", alt="logo")
+            .col-6.d-flex.align-items-center.justify-content-end
+                span.footer__span Copyright © 2019 ICWTADS. All rights reserved.
