--- a/app/includes/_footer.html
+++ b/app/includes/_footer.html
@@ -1,2 +1,9 @@
 
-<footer></footer>
+<footer class="footer d-flex align-items-center">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-6 d-flex align-items-center justify-content-start"><a href="#"><img src="./img/icwt-logo.svg" alt="logo"/></a></div>
+      <div class="col-6 d-flex align-items-center justify-content-end"><span class="footer__span">Copyright © 2019 ICWTADS. All rights reserved.</span></div>
+    </div>
+  </div>
+</footer>
