--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -15,8 +15,8 @@ main.main
                             p.text ICWT – a high-quality advertising network for shortly reaching commercial success.<br> Only credible ad formats supplemented by wide customization features create<br> ample opportunities for running an effective advertising campaign.
                     .row
                         .col-12.buttons
-                            a(href="#").button_monetize.btn_font-color_white.d-flex.align-items-center.justify-content-center  MONETIZE
-                            a(href="#").button_ADVERTIZE.btn_font-color_white.d-flex.align-items-center.justify-content-center  ADVERTIZE
+                            a(href="#").button_monetize.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center  MONETIZE
+                            a(href="#").button_ADVERTIZE.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center  ADVERTIZE
                 .col-md
     .second-box
         .container
@@ -81,7 +81,7 @@ main.main
                         h3.stick__title_style AFFILIATE <br>PROGRAM
                     .first-stick__text.d-flex.align-items-center.justify-content-center
                         p.stick__text_style A partnership with ICWT is a beneficial opportunity to gain a new riskless source of income
-    .third-box
+    .third-box.blur-box-with-lines
         .container
             .row
                 .col-md-3
@@ -91,7 +91,7 @@ main.main
                 .col-md-3
             .row
                 .col-12.d-flex.align-items-center.justify-content-center
-                    a(href="#").third-box__button.btn_font-color_blue.d-flex.align-items-center.justify-content-center  CREATE A CAMPAIGN
+                    a(href="#").third-box__button.btn_font-color_blue.button_hover-and-active.d-flex.align-items-center.justify-content-center  CREATE A CAMPAIGN
     .fourth-box
         .container
             .row
@@ -132,26 +132,17 @@ main.main
                     span.fifth-box__span.d-flex.align-items-center.justify-content-center Choose and combine the best Advertising Solutions for reaching a Major Impact
             .row
                 .col-12.fifth-box__box-for-tabs
-                    //-.row
-                        .col-12.no-padding.col-md-3.d-flex.align-items-center.justify-content-center
-                            button(id="teasers").fifth-box__batton-tabs.fifth-box__batton-tabs_right-line TEASERS
-                        .col-12.no-padding.col-md-3.d-flex.align-items-center.justify-content-center
-                            button(id="context").fifth-box__batton-tabs.fifth-box__batton-tabs_right-line CONTEXT
-                        .col-12.no-padding.col-md-3.d-flex.align-items-center.justify-content-center
-                            button(id="banners").fifth-box__batton-tabs.fifth-box__batton-tabs_right-line banners
-                        .col-12.no-padding.col-md-3.d-flex.align-items-center.justify-content-center
-                            button(id="mobile").fifth-box__batton-tabs mobile
-                    ul(id="myTab").nav.nav-tabs.nav-fill.nav-overflow
+                    ul(id="myTab" role="tablist").nav.nav-tabs.nav-fill.nav-overflow
                         li.nav-item.col-12.col-sm-6.col-md-3.no-padding
-                            a(data-toggle="tab" href="#teasers").nav-link.active.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center Teasers
+                            a(id="teasers-tab" role="tab" aria-controls="teasers" aria-selected="true" data-toggle="tab" href="#teasers").nav-link.active.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center Teasers
                         li.nav-item.col-12.col-sm-6.col-md-3.no-padding
-                            a(data-toggle="tab" href="#context").nav-link.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center context
+                            a(id="context-tab" role="tab" aria-controls="context" aria-selected="false" data-toggle="tab" href="#context").nav-link.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center context
                         li.nav-item.col-12.col-sm-6.col-md-3.no-padding
-                            a(data-toggle="tab" href="#banners").nav-link.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center banners
+                            a(id="banners-tab" role="tab" aria-controls="banners" aria-selected="false" data-toggle="tab" href="#banners").nav-link.fifth-box__batton-tabs.fifth-box__batton-tabs_right-line.d-flex.align-items-center.justify-content-center banners
                         li.nav-item.col-12.col-sm-6.col-md-3.no-padding
-                            a(data-toggle="tab" href="#mobile").nav-link.fifth-box__batton-tabs.d-flex.align-items-center.justify-content-center mobile
-                    .tab-content
-                        div(id="teasers").tab-pane.fade.in.active
+                            a(id="mobile-tab" role="tab" aria-controls="mobile" aria-selected="false" data-toggle="tab" href="#mobile").nav-link.fifth-box__batton-tabs.d-flex.align-items-center.justify-content-center mobile
+                    div(id="myTabContent").tab-content
+                        div(id="teasers" role="tabpanel" aria-labelledby="teasers-tab").tab-pane.fade.show.active
                             .container-fluid
                                 .row
                                     .col-12.col-md-8.col-lg-6
@@ -160,9 +151,9 @@ main.main
                                         h3.tabs__title One of the most interest-provoking advertising method.
                                         span.tabs__span An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.
                                         br
-                                        a(href="#").tabs__button.btn_font-color_white.d-flex.align-items-center.justify-content-center Create a campaign
+                                        a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
 
-                        div(id="context").tab-pane
+                        div(id="context" role="tabpanel" aria-labelledby="context-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/context.png", alt="").img_max-width
@@ -170,8 +161,8 @@ main.main
                                     h3.tabs__title Textual ads - easy and fruitful format for commercial goals
                                     span.tabs__span Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.d-flex.align-items-center.justify-content-center Create a campaign
-                        div(id="banners").tab-pane
+                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                        div(id="banners" role="tabpanel" aria-labelledby="banners-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/banners.png", alt="").img_max-width
@@ -179,8 +170,8 @@ main.main
                                     h3.tabs__title An ultimate eye-catching advertising format to draw viewers’ attention
                                     span.tabs__span Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.d-flex.align-items-center.justify-content-center Create a campaign
-                        div(id="mobile").tab-pane
+                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                        div(id="mobile" role="tabpanel" aria-labelledby="mobile-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/mobile.png", alt="").img_max-width
@@ -188,7 +179,7 @@ main.main
                                     h3.tabs__title The up-to-day shortest way to reach your target audience
                                     span.tabs__span Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.d-flex.align-items-center.justify-content-center Create a campaign
+                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
     .sixth-box
         .container
             .row
@@ -198,33 +189,33 @@ main.main
                             .col-12
                                 h3.sixth-box__title The first-rate means for reaching the target market
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-left-001.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 5 minutes to setup a campaign 
                                 span.sixth-box__span Quick and easy ads customization
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-left-002.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Manual sites selection  
                                 span.sixth-box__span Choosing solely relevant ad platforms
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-left-003.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Real-time statistic  
                                 span.sixth-box__span Only up-to-date ad campaign data
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-left-004.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 100% real users 
                                 span.sixth-box__span Protection from any bot or suspicious activity
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-left-005.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Helpful support team 
                                 span.sixth-box__span Timely assistance from qualified consultants
                 .col-12.col-md-6
@@ -233,34 +224,72 @@ main.main
                             .col-12
                                 h3.sixth-box__title For publishers who want to monetize the site
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-right-001.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Easy to operate 
                                 span.sixth-box__span Just paste the ad code to the site
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-right-002.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Clear statistics  
                                 span.sixth-box__span Detailed views and clicks reports
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-right-003.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Full safety  
                                 span.sixth-box__span Checked and approved advert messages 
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-right-004.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Quick payments 
                                 span.sixth-box__span Fast and safe generation of income
                         .row.padding_bottom
-                            .col-2
+                            .col-3.col-md-3.col-lg-2
                                 img(src="img/icon-right-005.svg", alt="")                            
-                            .col-10
+                            .col-9.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Various ad settings 
                                 span.sixth-box__span Easy ads adaption to the site design
+    .seventh-box.blur-box-with-lines
+        .container
+            .row
+                .col-12
+                    h3.seventh-box__title Sign up today
+            .row
+                .col-10.offset-1.col-md-6.offset-md-3.sevent-box__box-for-tabs
+                    ul(id="myTab" role="tablist").nav.nav-tabs.nav-fill.nav-overflow
+                        li.nav-item.col-12.col-sm-6.no-padding
+                            a(id="advertiser-tab" role="tab" aria-controls="advertiser" aria-selected="true" data-toggle="tab" href="#advertiser").nav-link.active.fifth-box__batton-tabs.d-flex.align-items-center.justify-content-center i'm an advertiser
+                        li.nav-item.col-12.col-sm-6.no-padding
+                            a(id="webmaster-tab" role="tab" aria-controls="webmaster" aria-selected="false" data-toggle="tab" href="#webmaster").nav-link.fifth-box__batton-tabs.d-flex.align-items-center.justify-content-center i'm an webmaster
+                    div(id="myTabContent").tab-content
+                        div(id="advertiser" role="tabpanel" aria-labelledby="advertiser-tab").tab-pane.fade.show.active
+                            .container-fluid
+                                .row
+                                    .col-12
+                                        form(action="#").form
+                                            label(for="email").form__label Ready for new customers?
+                                            input(type="email", name="Your Email" placeholder="Your Email").form__input
+                                            input(type="text", name="Company name" placeholder="Company name").form__input
+                                            input(type="text", name="name" placeholder="Name").form__input
+                                            input(type="password", name="password" placeholder="Password").form__input
+                                            input(type="submit", value="Sign Up").form__button.button_hover-and-active
+                                            span.form_span We will help you to set up and launch an advertising campaign free of charge if you encounter difficulties in.
 
+                                            
+                        div(id="webmaster" role="tabpanel" aria-labelledby="webmaster-tab").tab-pane.fade
+                            .container-fluid
+                                .row
+                                    .col-12
+                                        form(action="#").form
+                                            label(for="email").form__label Want to earn more?
+                                            input(type="email", name="Your Email" placeholder="Your Email").form__input
+                                            input(type="text", name="Your site URL" placeholder="Your site URL").form__input
+                                            input(type="text", name="name" placeholder="Name").form__input
+                                            input(type="password", name="password" placeholder="Password").form__input
+                                            input(type="submit", value="Sign Up").form__button.button_hover-and-active
+                                            span.form_span We will help you to place ad blocks on your website for free if you have difficulties.
                 
