--- a/app/scss/import/_media.scss
+++ b/app/scss/import/_media.scss
@@ -10,16 +10,40 @@
 
 
 @media only screen and (max-width:1024px) {
+    
 
 }
 @media only screen and (max-width:960px) {
 }
 
 @media only screen and (max-width:768px) {
-   
+    .navbar_position{
+        position: absolute;
+        top:69px;
+        left:0px;
+        width: 100%;
+        border-top:1px solid #cdcdcd;
+        background-color: #FFFFFF;
+        box-shadow: 0px 5px 5px #0000001A;
+    }
 }
 
-@media only screen and (max-width:480px) {
+@media only screen and (max-width:575px) {
+    .navbar_position{
+        position: absolute;
+        top:98px;
+        left:0px;
+        width: 100%;
+        border-top:1px solid #cdcdcd;
+        background-color: #FFFFFF;
+        box-shadow: 0px 5px 5px #0000001A;
+    }
+    .third-box.blur-box-with-lines::after{
+        content: none;
+    }
+    .third-box.blur-box-with-lines::before{
+        content: none;
+    }
 }
 
 @media only screen and (max-width:375px) {
